--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "nodemailer": "^7.0.11",
-    "primus": "^8.0.9"
+    "primus": "^8.0.9",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
